[workspace]
resolver = "2"
members = ["common", "hook", "macros", "sdk", "sdk_gen"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
debug = true

[workspace.dependencies]
windows = { version = "0.48.0", features = [
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_System_ProcessStatus",
] }

